--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,52 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: lightgray;
+    width: 100%;
+    height: 100%;
+}
+
+nav{
+    width: 1000px;  
+    background-color: white;
+    margin:auto;
+    margin-top: 100px;
+    border-radius: 10px 10px 0 0 ;
+}
+
+.intestazione{
+    width: 100%;
+    height: 80px;
+    background-color: white;
+    
+}
+
+#text-toboolist{
+    font-size: 50px;
+    vertical-align: text-bottom;
+}
+
+.logo-text{
+    padding: 10px;
+}
+
+#tools{
+    padding: 20px ;
+    margin-left: 50px;
+}
+
+#add-task{
+    background-color: rgb(0, 162, 255);
+    border-radius: 5px;
+    padding: 7px;
+    color: lightgray;
+}
+
+#add-section{
+    border: solid black 1px;
+    padding: 7px ;
+    border-radius: 5px ;
+    color: lightgray;
+}
