--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,8 @@
 }
 
 body{
-    background-color: lightgray;
-    width: 100%;
-    height: 100%;
+    background-color: rgb(240, 240, 240);
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 nav{
@@ -19,10 +18,7 @@ nav{
 }
 
 .intestazione{
-    width: 100%;
-    height: 80px;
-    background-color: white;
-    
+ background-color: white;
 }
 
 #text-toboolist{
@@ -39,11 +35,39 @@ nav{
     margin-left: 50px;
 }
 
+main{
+    width: 1000px;  
+    background-color: white;
+    margin:auto;
+    height: 1100px;
+    margin-top: 4px;
+    border-radius: 0 0 10px 10px;
+}
+
+#menu{
+    font-size: 20px;
+    line-height: 3.5;
+    padding: 80px;
+}
+
+ul{
+    list-style: none;
+}
+
+.schede{
+    margin-bottom: 30px;
+}
+
+#tools{
+    padding: 20px ;
+    margin-left: 50px;
+}
+
 #add-task{
     background-color: rgb(0, 162, 255);
     border-radius: 5px;
     padding: 7px;
-    color: lightgray;
+    color: white;
 }
 
 #add-section{
@@ -51,4 +75,3 @@ nav{
     padding: 7px ;
     border-radius: 5px ;
     color: lightgray;
-}
