--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,11 @@ ul{
     border-radius: 5px ;
     color: lightgray ;
 }
+
+.editorial{
+    font-size: 12px;
+    background-color: rgb(0, 162, 255);
+    padding: 10px;
+    color: white;
+    border-radius: 20px;
+}
